Spring MVC configs fixed so it can be deployed with Apache Tomcat